<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
		>

	<TextView android:id="@+id/version_label"
			  android:layout_marginLeft="5sp"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/version"/>
	<TextView
			android:layout_marginLeft="5sp"
			android:layout_marginTop="5sp"
			android:layout_marginBottom="5sp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/send_me_bugs"
			android:autoLink="all"/>
	<TextView
			android:layout_marginLeft="5sp"
			android:layout_marginTop="5sp"
			android:layout_marginBottom="5sp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/email"
			android:autoLink="all"/>
	<TextView
			android:layout_marginLeft="5sp"
			android:layout_marginBottom="5sp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/homepage"
			android:autoLink="all"/>
	<TextView
			android:layout_marginLeft="5sp"
			android:layout_marginTop="5sp"
			android:layout_marginBottom="5sp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/credits"
			android:autoLink="all"/>


</LinearLayout>
