<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/filename"
			/>
	<EditText android:id="@+id/filename"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			/>
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/directory"
			/>
	<EditText android:id="@+id/directory"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:enabled="false"
			  android:text="/sdcard/opensudoku"/>
	<Button android:id="@+id/save_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:text="@string/save"
			/>
</LinearLayout>
